workspace/compiler/tests/snapshots/test_snap_python__py_overloads_ir.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: sorted
---
{
    "snap_overloads.py": Module(
        Symbol {
            name: "snap_overloads",
            path: Local(
                "snap_overloads.py",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: Module {
                members: None,
            },
        },
    ),
    "snap_overloads::process": Function(
        Symbol {
            name: "process",
            path: Local(
                "snap_overloads::process",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            deprecation: None,
            doc_links: None,
            inner: Function {
                input_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "x",
                                type: Some(
                                    TypeReference(
                                        TypeReference {
                                            identifier: "builtins.int",
                                            generic_args: None,
                                        },
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                output_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "",
                                type: Some(
                                    TypeReference(
                                        TypeReference {
                                            identifier: "builtins.int",
                                            generic_args: None,
                                        },
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                type_links: None,
                attributes: None,
                generics: None,
                receiver: None,
                overloads: Some(
                    [
                        Function {
                            input_parameters: Some(
                                [
                                    Literal(
                                        LiteralParameter {
                                            name: "x",
                                            type: Some(
                                                TypeReference(
                                                    TypeReference {
                                                        identifier: "builtins.int",
                                                        generic_args: None,
                                                    },
                                                ),
                                            ),
                                            attributes: None,
                                            default_value: None,
                                            description: None,
                                        },
                                    ),
                                ],
                            ),
                            output_parameters: Some(
                                [
                                    Literal(
                                        LiteralParameter {
                                            name: "",
                                            type: Some(
                                                TypeReference(
                                                    TypeReference {
                                                        identifier: "builtins.int",
                                                        generic_args: None,
                                                    },
                                                ),
                                            ),
                                            attributes: None,
                                            default_value: None,
                                            description: None,
                                        },
                                    ),
                                ],
                            ),
                            type_links: None,
                            attributes: None,
                            generics: None,
                            receiver: None,
                            overloads: None,
                            implemented: false,
                            members: None,
                            implemented_protocols: None,
                        },
                        Function {
                            input_parameters: Some(
                                [
                                    Literal(
                                        LiteralParameter {
                                            name: "x",
                                            type: Some(
                                                TypeReference(
                                                    TypeReference {
                                                        identifier: "builtins.str",
                                                        generic_args: None,
                                                    },
                                                ),
                                            ),
                                            attributes: None,
                                            default_value: None,
                                            description: None,
                                        },
                                    ),
                                ],
                            ),
                            output_parameters: Some(
                                [
                                    Literal(
                                        LiteralParameter {
                                            name: "",
                                            type: Some(
                                                TypeReference(
                                                    TypeReference {
                                                        identifier: "builtins.str",
                                                        generic_args: None,
                                                    },
                                                ),
                                            ),
                                            attributes: None,
                                            default_value: None,
                                            description: None,
                                        },
                                    ),
                                ],
                            ),
                            type_links: None,
                            attributes: None,
                            generics: None,
                            receiver: None,
                            overloads: None,
                            implemented: false,
                            members: None,
                            implemented_protocols: None,
                        },
                        Function {
                            input_parameters: Some(
                                [
                                    Literal(
                                        LiteralParameter {
                                            name: "x",
                                            type: Some(
                                                TypeReference(
                                                    TypeReference {
                                                        identifier: "builtins.bytes",
                                                        generic_args: None,
                                                    },
                                                ),
                                            ),
                                            attributes: None,
                                            default_value: None,
                                            description: None,
                                        },
                                    ),
                                ],
                            ),
                            output_parameters: Some(
                                [
                                    Literal(
                                        LiteralParameter {
                                            name: "",
                                            type: Some(
                                                TypeReference(
                                                    TypeReference {
                                                        identifier: "builtins.bytes",
                                                        generic_args: None,
                                                    },
                                                ),
                                            ),
                                            attributes: None,
                                            default_value: None,
                                            description: None,
                                        },
                                    ),
                                ],
                            ),
                            type_links: None,
                            attributes: None,
                            generics: None,
                            receiver: None,
                            overloads: None,
                            implemented: false,
                            members: None,
                            implemented_protocols: None,
                        },
                    ],
                ),
                implemented: false,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
}
