workspace/compiler/tests/snapshots/test_snap_python__py_render_dataclass_basic_w80.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

@dataclass
class Point:
    x: int
    y: int
    label: str
