workspace/compiler/tests/snapshots/test_snap_python__py_render_dataclass_complex_w40.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

@dataclass
class Container:
    items: list[int]
    mapping: dict[str, int]
    maybe: str | NoneType
    union_none: str | NoneType

# ---

// <unrendered constant>

# ---

// <unrendered constant>
